--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title></title>
-  <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="apple-touch-icon" href="apple-touch-icon.png">
-
+  <title>JS TYPE CAST</title>
+  <meta name="description" content="Understanding JavaScript Type Conversion">
+  <meta name="author" content="Tugcem Yalcin">
+  <meta name="keywords" content="js, js type casting, js type conversion, number, boolean, string, NaN, null, undefined, object, date, function, regexp">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+  <link rel="stylesheet" href="css/font-awesome.min.css">
   <link rel="stylesheet" href="css/main.css">
   <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Montserrat:200,400,700'>
   <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Lato:200,400,700,400italic,200,700italic'>
@@ -20,69 +21,75 @@
   <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
 </head>
 <body>
-        <!--[if lt IE 8]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-            <![endif]-->
-            <div class="container-fluid bg-1 text-center search-section">
-              <div class="margin">
-                <span class="name">
-                  JS TYPE CAST
-                </span>
-                <span class="skills">
-                  Understanding JavaScript Type Conversion
-                </span>
-              </div>
+<!--[if lt IE 8]>
+<p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+<![endif]-->
+<div class="main-container">
+  <div class="container-fluid bg-1 text-center sample-section">
+    <div class="margin">
+      <span class="name">
+        JS TYPE CAST
+      </span>
+      <span class="skills">
+        Understanding JavaScript Type Conversion
+      </span>
+      <div class="row">
+        <a class="btn-social-icon btn-lg btn-github" href="https://github.com/tugcem/js-type-cast">
+          <span class="fa fa-github"></span>
+        </a>
+      </div>
+    </div>
+  </div>
+  <div class="container-fluid bg-3 text-center sample-section">
+    <div class="row">
+      <div class="col-lg-12 name">
+        <h2>Check any JavaScript Conversion</h2>
+      </div>
+    </div>
+    <div class="row margin top-buffer">
+      <div class="col-lg-8 col-lg-offset-2">
+        <form action="/" method="post">
+          <div class="form-group input-group input-group-lg">
+            <input type="text" id="value" class="form-control">
+            <div class="input-group-btn">
+              <button type="submit" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Convert <span class="caret"></span></button>
+              <ul class="dropdown-menu dropdown-menu-right" role="menu">
+                <li><a tabindex="-1">Number</a></li>
+                <li><a tabindex="-1">String</a></li>
+                <li><a tabindex="-1">Boolean</a></li>
+              </ul>
             </div>
-            <div class="container-fluid bg-3 text-center search-section">
-              <div class="row">
-                <div class="col-lg-12 name">
-                  <h2>Check any JavaScript Conversion</h2>
-                </div>
-              </div>
-              <div class="row margin top-buffer">
-                <div class="col-lg-8 col-lg-offset-2">
-                  <form action="/" method="post">
-                    <div class="form-group input-group input-group-lg">
-                      <input type="text" id="value" class="form-control">
-                      <div class="input-group-btn">
-                        <button type="submit" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Convert <span class="caret"></span></button>
-                        <ul class="dropdown-menu dropdown-menu-right" role="menu">
-                          <li><a tabindex="-1">Number</a></li>
-                          <li><a tabindex="-1">String</a></li>
-                          <li><a tabindex="-1">Boolean</a></li>
-                        </ul>
-                      </div>
-                    </div>
-                    <p id="warning" class="bg-danger text-danger"></p>
-                    <p>eg: -10,  'hello',  "world",  true,  null,  undefined,  NaN,  { x: 1 },  [ 1, 'two' ], <br> Date(20, 09, 1990),  function(x) { f(x) },  /\d+/g</p>
-                  </form>
-                </div>
-              </div>
-            </div>
-            <!-- Third Container (Grid) -->
-            <div class="container-fluid bg-2 text-center" id="last-section">
-              <div class="row" >
-                <h1 id="result"></h1>
-              </div>
-              <div class="row top-buffer">
-                <p class="col-lg-12" id="rules"></p>
-              </div>
-            </div>
-              <!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script> -->
-              <!-- <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script> -->
-              <script src="js/vendor/jquery-1.11.2.min.js"></script>
-              <script src="js/vendor/bootstrap.min.js"></script>
+          </div>
+          <p id="warning" class="bg-danger text-danger"></p>
+          <p>eg: -10,  'hello',  "world",  true,  null,  undefined,  NaN,  { x: 1 },  [ 1, 'two' ], <br> Date(20, 09, 1990),  function(x) { f(x) },  /\d+/g</p>
+        </form>
+      </div>
+    </div>
+  </div>
+  <!-- Third Container (Grid) -->
+  <div class="container-fluid bg-2 text-center sample-section last-section">
+    <div class="row" >
+      <h1 id="result"></h1>
+    </div>
+    <div class="row top-buffer">
+      <p class="col-lg-8 col-lg-offset-2" id="rules"></p>
+    </div>
+  </div>
+</div>
+  <!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script> -->
+  <!-- <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script> -->
+  <script src="js/vendor/jquery-1.11.2.min.js"></script>
+  <script src="js/vendor/bootstrap.min.js"></script>
 
-              <script src="js/main.js"></script>
+  <script src="js/main.js"></script>
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-              <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-              <script>
-                (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-                  function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-                e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-                e.src='//www.google-analytics.com/analytics.js';
-                r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-                ga('create','UA-XXXXX-X','auto');ga('send','pageview');
-              </script>
-            </body>
-            </html>
+    ga('create', 'UA-80949110-1', 'auto');
+    ga('send', 'pageview');
+
+  </script>
+</body>
