--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" href="img/star-32.png">
   <title>JS TYPE CAST</title>
   <meta name="description" content="Understanding JavaScript Type Conversion">
   <meta name="author" content="Tugcem Yalcin">
